--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* group utility */
+
+.btn {
+    @apply px-4 py-1 border rounded-full text-sm font-semibold hover:text-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-offset-2
+    @apply p-2
+}
+
+.btn-purple {
+    @apply border-purple-200 text-purple-600 hover:bg-purple-600 focus:ring-purple-600
+}
+
+.btn-green {
+    @apply border-purple-200 text-green-600 hover:bg-green-600 focus:ring-green-600
+}
