--- a/output/tailwind.css
+++ b/output/tailwind.css
@@ -831,10 +831,24 @@ h1 {
   font-size: 12px;
 }
 
+@variants hover, focus {
+  .text-body {
+    font-size: 12px;
+  }
+}
+
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:text-body:hover {
+  font-size: 12px;
+}
+
+.focus\:text-body:focus {
+  font-size: 12px;
 }
 
 @media (min-width: 640px) {
